<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="@dimen/padding20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:orientation="vertical">
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/inputPhoneRegister"
                android:textSize="@dimen/fontMedium"
                />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:weightSum="10"
                android:layout_marginTop="@dimen/margin24dp"
                android:background="@color/colorWhite"
                >

                <ImageView
                    android:padding="@dimen/padding5dp"
                    android:background="@color/colorWhite"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:src="@drawable/logo_viettnam" />

                <TextView
                    android:background="@color/colorWhite"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/areaCode"
                    android:textSize="@dimen/fontMedium"
                    android:textColor="@color/colorBlack"
                    android:layout_marginRight="@dimen/margin10dp"
                    />

                <EditText
                    android:paddingLeft="@dimen/padding10dp"
                    android:id="@+id/etPhone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:hint="@string/phoneHint"
                    android:background="@color/colorWhite"
                    android:textSize="@dimen/fontMediumBig"
                    android:inputType="number"
                    android:textStyle="bold"
                    android:maxLength="@integer/maxLenghtPhoneNumber"
                    />
            </LinearLayout>

            <Button
                android:layout_marginTop="@dimen/margin24dp"
                android:id="@+id/btnLogin"
                style="@style/button.Login"
                android:text="@string/login"

                />
            <TextView
                android:layout_marginTop="@dimen/margin8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:gravity="center"/>
            <Button
                android:id="@+id/btnRegister"
                style="@style/button.Login"
                android:text="@string/register"/>

            <TextView
                android:layout_marginTop="@dimen/margin16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/contactWhitMe"
                android:textSize="@dimen/fontSmall"
                />
        </LinearLayout>
    </LinearLayout>
</layout>
