<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <include layout="@layout/content_banner_main"
            />
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolBarTheme.ToolBarStyle"
            android:theme="@style/ToolBarTheme.ToolBarStyle"
            app:title="@string/register_step6"
             />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="20">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/imvLogo"
                    android:layout_gravity="bottom|center_horizontal"
                    android:src="@drawable/ic_logo" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="15"
                android:orientation="vertical"
                android:padding="@dimen/padding10dp"
                android:background="@drawable/background_layout_white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".activity.AcceptContractActivity"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/padding10dp"
                    android:paddingLeft="@dimen/padding5dp"
                    android:paddingRight="@dimen/padding5dp"
                    android:paddingBottom="@dimen/padding5dp"
                    android:weightSum="14">
                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="11">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="@dimen/fontSmall"
                            android:text="@string/contract"/>
                    </ScrollView>
                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/acceptContract"/>
                    <Button
                        android:id="@+id/btnRegister"
                        android:text="@string/register"
                        style="@style/buttonAcceptContract"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>
</layout>

