<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.RegisterResultActivity"
        android:orientation="vertical"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <include layout="@layout/content_banner_main"/>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/ToolBarTheme.ToolBarStyle"
                android:theme="@style/ToolBarTheme.ToolBarStyle"
                app:title="@string/register_step5"
                app:titleTextColor="@color/colorBlack" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="20">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/imvLogo"
                        android:layout_gravity="bottom|center_horizontal"
                        android:src="@drawable/ic_logo" />
                </LinearLayout>
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="15"
                    android:orientation="vertical"
                    android:padding="@dimen/padding5dp"
                    android:layout_margin="@dimen/margin24dp">

                    <LinearLayout
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height50dp"
                        android:orientation="horizontal">
                        <com.jaredrummler.android.widget.AnimatedSvgView
                            android:id="@+id/avgResult"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"

                            app:animatedSvgFillColors="@array/arrayColorFaild"
                            app:animatedSvgGlyphStrings="@array/arraySvgFaild"
                            app:animatedSvgFillStart="1200"
                            app:animatedSvgFillTime="1000"
                            app:animatedSvgImageSizeX="400"
                            app:animatedSvgImageSizeY="400"
                            app:animatedSvgTraceTime="2000"
                            app:animatedSvgTraceTimePerGlyph="1000"
                            android:layout_marginRight="@dimen/margin4dp"/>
                        <TextView
                            android:id="@+id/tvResult"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/registerSuccess"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvNotification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin10dp"
                        android:gravity="center"
                        android:text="@string/notificationRegisterSuccess"
                        android:textSize="@dimen/fontMediumSmall" />

                    <TextView
                        android:textColor="@color/colorRed"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/margin10dp"
                        android:textSize="@dimen/fontMediumSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Liên hệ với chúng tôi: 0389512898"
                        android:gravity="center"
                        />


                    <Button
                        android:id="@+id/btnBack"
                        android:text="@string/btnBackToMain"
                        style="@style/button.Login"/>
                </LinearLayout>
            </LinearLayout>


        </FrameLayout>

    </LinearLayout>
</layout>
